fixing height on mobile issue

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ h5 {
 }
 p {
 	line-height: 1.3;
+	margin-bottom: 1%;
 }
 .sub-font-scale {
 	font-size: 2em;
@@ -354,7 +355,7 @@ span {
 	position: absolute;
 	margin-top: 3%;
 	width: 36.9%;
-	height: 70%;
+	height: 50%;
 	background-color: rgba(0, 0, 0, .7);
 	z-index: 2;
 }
@@ -363,7 +364,7 @@ span {
 	margin-left: 62.1%;
 	margin-top: 3%;
 	width: 39.5%;
-	height: 70%;
+	height: 50%;
 	background-color: rgba(0, 0, 0, .7);
 	z-index: 2;
 }
@@ -381,7 +382,7 @@ span {
 }
 .board-cover-bottom {
 	width: 100%;
-	height: 250px;
+	height: 50px;
 	margin-top: -0.3%;
 	position: absolute;
 	background-color: #000;
